--- a/packages/config-eslint/package.json
+++ b/packages/config-eslint/package.json
@@ -6,7 +6,8 @@
   "exports": {
     "./base": "./base.js",
     "./next-js": "./next.js",
-    "./react-internal": "./react-internal.js"
+    "./react-internal": "./react-internal.js",
+    "./vite": "./vite.js"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
