feat: set up basic features package

--- a/apps/web/tsconfig.app.json
+++ b/apps/web/tsconfig.app.json
@@ -25,6 +25,7 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./*"],
+      "@workspace/features/*": ["../../packages/features/src/*"],
       "@workspace/ui/*": ["../../packages/ui/src/*"]
     }
   },
