--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -5,6 +5,7 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./*"],
+      "@workspace/features/*": ["../../packages/features/src/*"],
       "@workspace/ui/*": ["../../packages/ui/src/*"]
     }
   }
