--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
+    "@workspace/features": "workspace:*",
     "@workspace/ui": "workspace:*",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-router": "^7.9.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
