--- a/packages/features/package.json
+++ b/packages/features/package.json
@@ -12,6 +12,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@tanstack/react-query": "^5.87.4",
     "@workspace/ui": "workspace:*",
+    "effect": "^3.17.13",
     "lucide-react": "^0.475.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
