--- a/packages/config-typescript/package.json
+++ b/packages/config-typescript/package.json
@@ -2,8 +2,5 @@
   "name": "@workspace/config-typescript",
   "version": "0.0.0",
   "private": true,
-  "license": "PROPRIETARY",
-  "publishConfig": {
-    "access": "public"
-  }
+  "license": "MIT"
 }
