--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "build": "turbo run build",
     "dev": "turbo run dev",
     "lint": "turbo run lint",
+    "prepare": "lefthook install",
     "test": "vitest run",
     "test:watch": "vitest --watch",
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
@@ -14,6 +15,7 @@
     "@radix-ui/react-select": "^2.2.6",
     "@workspace/config-eslint": "workspace:*",
     "@workspace/config-typescript": "workspace:*",
+    "lefthook": "^1.13.6",
     "prettier": "^3.6.2",
     "turbo": "^2.5.8",
     "typescript": "5.9.2",
