--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@workspace/config-eslint": "workspace:*",
     "@workspace/config-typescript": "workspace:*",
     "lefthook": "^1.13.6",
+    "pkg-pr-new": "^0.0.60",
     "prettier": "^3.6.2",
     "turbo": "^2.5.8",
     "typescript": "5.9.2",
