feat: add test command to github workflow

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -47,3 +47,18 @@ jobs:
 
       - name: Lint
         run: pnpm lint
+
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v5
+
+      - name: Install Dependencies
+        uses: ./.github/workflows/actions/install-dependencies
+
+      - name: Build config-vitest package
+        run: pnpm --filter @workspace/config-vitest run build
+
+      - name: Test
+        run: pnpm test
