feat: add wallet standard with example

--- a/apps/extension/package.json
+++ b/apps/extension/package.json
@@ -13,6 +13,7 @@
     "lint": "eslint \"./**/*.{ts,mjs}\""
   },
   "dependencies": {
+    "@workspace/wallet-standard": "workspace:*",
     "react": "catalog:",
     "react-dom": "catalog:"
   },
