--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.1.14",
     "@workspace/features": "workspace:*",
     "@workspace/ui": "workspace:*",
+    "@workspace/wallet-standard": "workspace:*",
     "react": "catalog:",
     "react-dom": "catalog:",
     "react-router": "^7.9.3"
