--- a/apps/extension/package.json
+++ b/apps/extension/package.json
@@ -13,16 +13,16 @@
     "lint": "eslint \"./**/*.{ts,mjs}\""
   },
   "dependencies": {
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react": "catalog:",
+    "react-dom": "catalog:"
   },
   "devDependencies": {
-    "@types/react": "^19.1.12",
-    "@types/react-dom": "^19.1.9",
+    "@types/react": "catalog:",
+    "@types/react-dom": "catalog:",
     "@wxt-dev/module-react": "^1.1.3",
-    "typescript": "^5.9.2",
+    "typescript": "catalog:",
     "wxt": "^0.20.6",
     "@workspace/config-eslint": "workspace:*",
-    "eslint": "^9.36.0"
+    "eslint": "catalog:"
   }
 }
