--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -13,15 +13,15 @@
   "dependencies": {
     "expo": "~54.0.12",
     "expo-status-bar": "~3.0.8",
-    "react": "19.1.0",
+    "react": "catalog:",
     "react-native": "0.81.4"
   },
   "devDependencies": {
-    "@types/react": "~19.1.0",
+    "@types/react": "catalog:",
     "@workspace/config-eslint": "workspace:^",
     "@workspace/config-typescript": "workspace:*",
-    "eslint": "^9.36.0",
+    "eslint": "catalog:",
     "eslint-config-expo": "~10.0.0",
-    "typescript": "~5.9.2"
+    "typescript": "catalog:"
   }
 }
