--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,23 +13,23 @@
     "@tailwindcss/vite": "^4.1.14",
     "@workspace/features": "workspace:*",
     "@workspace/ui": "workspace:*",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
+    "react": "catalog:",
+    "react-dom": "catalog:",
     "react-router": "^7.9.3"
   },
   "devDependencies": {
-    "@eslint/js": "^9.37.0",
-    "@types/react": "^19.2.2",
-    "@types/react-dom": "^19.2.1",
+    "@eslint/js": "catalog:",
+    "@types/react": "catalog:",
+    "@types/react-dom": "catalog:",
     "@vitejs/plugin-react": "^5.0.4",
     "@workspace/config-eslint": "workspace:^",
     "@workspace/config-typescript": "workspace:*",
-    "eslint": "^9.37.0",
+    "eslint": "catalog:",
     "eslint-plugin-react-hooks": "^6.1.1",
     "eslint-plugin-react-refresh": "^0.4.23",
-    "globals": "^16.4.0",
-    "typescript": "^5.9.3",
-    "typescript-eslint": "^8.46.0",
+    "globals": "catalog:",
+    "typescript": "catalog:",
+    "typescript-eslint": "catalog:",
     "vite": "^7.1.9",
     "vite-tsconfig-paths": "^5.1.4"
   }
