--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -37,9 +37,9 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.545.0",
     "next-themes": "^0.4.6",
-    "react": "^19.2.0",
+    "react": "catalog:",
     "react-day-picker": "^9.11.0",
-    "react-dom": "^19.2.0",
+    "react-dom": "catalog:",
     "react-resizable-panels": "^3.0.6",
     "recharts": "3.2.1",
     "sonner": "^2.0.7",
@@ -51,15 +51,15 @@
     "@tailwindcss/postcss": "^4.1.14",
     "@turbo/gen": "^2.5.8",
     "@types/node": "^24.7.0",
-    "@types/react": "^19.2.2",
-    "@types/react-dom": "^19.2.1",
+    "@types/react": "catalog:",
+    "@types/react-dom": "catalog:",
     "@workspace/config-eslint": "workspace:*",
     "@workspace/config-typescript": "workspace:*",
     "@workspace/config-vitest": "workspace:*",
-    "eslint": "^9.37.0",
+    "eslint": "catalog:",
     "jsdom": "^27.0.0",
     "tailwindcss": "^4.1.14",
-    "typescript": "^5.9.3",
+    "typescript": "catalog:",
     "vitest": "^3.2.4"
   },
   "exports": {
