--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,3 +1,13 @@
+catalog:
+  '@eslint/js': 9.37.0
+  '@types/react': 19.2.2
+  '@types/react-dom': 19.2.1
+  eslint: 9.37.0
+  globals: 16.4.0
+  react: 19.2.0
+  react-dom: 19.2.0
+  typescript: 5.9.3
+  typescript-eslint: 8.46.0
 minimumReleaseAge: 1440
 packages:
   - 'apps/*'
