--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,5 +1,6 @@
 catalog:
   '@eslint/js': 9.37.0
+  '@tanstack/react-query': 5.90.2
   '@types/react': 19.2.2
   '@types/react-dom': 19.2.1
   eslint: 9.37.0
