--- a/apps/extension/package.json
+++ b/apps/extension/package.json
@@ -16,15 +16,16 @@
   "dependencies": {
     "@workspace/wallet-standard": "workspace:*",
     "react": "catalog:",
-    "react-dom": "catalog:"
+    "react-dom": "catalog:",
+    "webext-bridge": "^6.0.1"
   },
   "devDependencies": {
     "@types/react": "catalog:",
     "@types/react-dom": "catalog:",
-    "@wxt-dev/module-react": "^1.1.3",
-    "typescript": "catalog:",
-    "wxt": "^0.20.6",
     "@workspace/config-eslint": "workspace:*",
-    "eslint": "catalog:"
+    "@wxt-dev/module-react": "^1.1.3",
+    "eslint": "catalog:",
+    "typescript": "catalog:",
+    "wxt": "^0.20.6"
   }
 }
