--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "prepare": "lefthook install",
     "test": "vitest run",
     "test:watch": "vitest --watch",
-    "format": "NODE_OPTIONS=\"--experimental-strip-types\" prettier --write \"**/*.{ts,tsx,md}\""
+    "format": "NODE_OPTIONS=\"--experimental-strip-types\" prettier --write \"**/*.{ts,tsx,md}\"",
+    "format:check": "NODE_OPTIONS=\"--experimental-strip-types\" prettier --check \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
     "@radix-ui/react-select": "^2.2.6",
