--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -12,7 +12,7 @@
     "hono": "^4.9.10"
   },
   "devDependencies": {
-    "@types/node": "^20.11.17",
+    "@types/node": "catalog:",
     "tsx": "^4.7.1",
     "typescript": "catalog:",
     "@workspace/config-eslint": "workspace:*",
