--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -24,9 +24,9 @@
     "@workspace/config-eslint": "workspace:*",
     "@workspace/config-typescript": "workspace:*",
     "@workspace/config-vitest": "workspace:*",
-    "@types/node": "^24.6.0",
-    "eslint": "^9.36.0",
+    "@types/node": "catalog:",
+    "eslint": "catalog:",
     "fake-indexeddb": "^6.2.2",
-    "typescript": "^5.9.2"
+    "typescript": "catalog:"
   }
 }
