--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,14 +1,22 @@
 catalog:
   '@eslint/js': 9.37.0
+  '@tailwindcss/postcss': 4.1.14
+  '@tailwindcss/vite': 4.1.14
   '@tanstack/react-query': 5.90.2
+  '@types/node': 24.7.1
   '@types/react': 19.2.2
   '@types/react-dom': 19.2.1
   eslint: 9.37.0
   globals: 16.4.0
+  jsdom: 27.0.0
+  lucide-react: 0.545.0
   react: 19.2.0
   react-dom: 19.2.0
+  react-router: 7.9.3
+  tailwindcss: 4.1.14
   typescript: 5.9.3
   typescript-eslint: 8.46.0
+  vitest: 3.2.4
 minimumReleaseAge: 1440
 packages:
   - 'apps/*'
