--- a/apps/extension/package.json
+++ b/apps/extension/package.json
@@ -14,6 +14,7 @@
     "lint:fix": "eslint . --max-warnings=0 --fix"
   },
   "dependencies": {
+    "@tanstack/react-query": "catalog:",
     "@workspace/background": "workspace:*",
     "@workspace/wallet-standard": "workspace:*",
     "react": "catalog:",
