--- a/packages/background/package.json
+++ b/packages/background/package.json
@@ -22,6 +22,8 @@
   "dependencies": {
     "@solana/wallet-standard-features": "^1.3.0",
     "@wallet-standard/core": "^1.1.1",
-    "@webext-core/messaging": "^2.3.0"
+    "@webext-core/messaging": "^2.3.0",
+    "@webext-core/proxy-service": "^1.2.1",
+    "@workspace/db": "workspace:*"
   }
 }
