--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,3 +1,7 @@
+packages:
+  - apps/*
+  - packages/*
+
 catalog:
   '@eslint/js': 9.37.0
   '@hookform/resolvers': ^5.2.2
@@ -13,15 +17,13 @@ catalog:
   jsdom: 27.0.0
   lucide-react: 0.545.0
   react: 19.2.0
-  react-hook-form: ^7.65.0
   react-dom: 19.2.0
+  react-hook-form: ^7.65.0
   react-router: 7.9.3
   tailwindcss: 4.1.14
   typescript: 5.9.3
   typescript-eslint: 8.46.0
   vitest: 3.2.4
   zod: ^4.1.12
+
 minimumReleaseAge: 1440
-packages:
-  - 'apps/*'
-  - 'packages/*'
