--- a/packages/db-react/package.json
+++ b/packages/db-react/package.json
@@ -26,6 +26,8 @@
   "dependencies": {
     "@tanstack/react-query": "catalog:",
     "@workspace/db": "workspace:*",
+    "@workspace/ui": "workspace:*",
+    "dexie-react-hooks": "^4.2.0",
     "react": "catalog:",
     "react-dom": "catalog:"
   }
