--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -13,6 +13,7 @@
     "test:watch": "vitest --watch"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.3",
@@ -41,7 +42,9 @@
     "react": "catalog:",
     "react-day-picker": "^9.11.0",
     "react-dom": "catalog:",
+    "react-hook-form": "^7.65.0",
     "react-resizable-panels": "^3.0.6",
+    "react-router": "catalog:",
     "recharts": "3.2.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
