feat: use zod to define db entities

--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -18,7 +18,8 @@
   },
   "dependencies": {
     "@workspace/core": "workspace:*",
-    "dexie": "^4.2.1"
+    "dexie": "^4.2.1",
+    "zod": "catalog:"
   },
   "devDependencies": {
     "@workspace/config-eslint": "workspace:*",
