--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -17,6 +17,7 @@ catalog:
   typescript: 5.9.3
   typescript-eslint: 8.46.0
   vitest: 3.2.4
+  zod: ^4.1.12
 minimumReleaseAge: 1440
 packages:
   - 'apps/*'
