--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -33,6 +33,9 @@ jobs:
       - name: Install Dependencies
         uses: ./.github/workflows/actions/install-dependencies
 
+      - name: Build config-vitest package
+        run: pnpm --filter @workspace/config-vitest run build
+
       - name: Check Types
         run: pnpm check-types
 
