--- a/packages/background/tsconfig.json
+++ b/packages/background/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "extends": "@workspace/config-typescript/base.json",
   "compilerOptions": {
-    "outDir": "dist",
+    "outDir": "dist"
   },
-  "include": ["src"],
+  "include": ["src", "test"],
   "exclude": ["node_modules", "dist"]
 }
