--- a/packages/keypair/tsconfig.json
+++ b/packages/keypair/tsconfig.json
@@ -5,6 +5,6 @@
     "module": "ESNext",
     "moduleResolution": "Bundler"
   },
-  "include": ["src"],
+  "include": ["src", "test"],
   "exclude": ["node_modules", "dist"]
 }
