--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -7,6 +7,7 @@
     "access": "public"
   },
   "scripts": {
+    "check-types": "tsc --noEmit",
     "lint": "eslint . --max-warnings=0",
     "lint:fix": "eslint . --max-warnings=0 --fix",
     "test": "vitest run",
@@ -45,7 +46,6 @@
     "react-hook-form": "^7.65.0",
     "react-resizable-panels": "^3.0.6",
     "react-router": "catalog:",
-    "recharts": "3.2.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tw-animate-css": "^1.4.0",
