feat: implement getActivity, getBalance, getExplorerUrl, getTokenAccounts functions

--- a/packages/solana-client/package.json
+++ b/packages/solana-client/package.json
@@ -15,6 +15,8 @@
     "test:watch": "vitest --watch"
   },
   "dependencies": {
+    "@solana-program/token": "catalog:",
+    "@solana-program/token-2022": "catalog:",
     "@solana/kit": "catalog:",
     "ws": "catalog:"
   },
