--- a/.github/workflows/publish-pkg-pr-new.yml
+++ b/.github/workflows/publish-pkg-pr-new.yml
@@ -24,4 +24,4 @@ jobs:
         run: pnpm build
 
       - name: Publish to pkg.pr.new
-        run: pnpm pkg-pr-new publish './packages/*'
+        run: pnpm pkg-pr-new publish --pnpm --packageManager=pnpm './packages/*'
