--- a/packages/settings/package.json
+++ b/packages/settings/package.json
@@ -1,17 +1,6 @@
 {
   "name": "@workspace/settings",
   "version": "0.0.0",
-  "type": "module",
-  "private": false,
-  "license": "MIT",
-  "exports": {
-    "./*": "./src/*.tsx"
-  },
-  "scripts": {
-    "check-types": "tsc --noEmit",
-    "lint": "eslint . --max-warnings=0",
-    "lint:fix": "eslint . --max-warnings=0 --fix"
-  },
   "dependencies": {
     "@hookform/resolvers": "catalog:",
     "@tanstack/react-query": "catalog:",
@@ -22,18 +11,29 @@
     "@workspace/ui": "workspace:*",
     "lucide-react": "catalog:",
     "react": "catalog:",
-    "react-hook-form": "catalog:",
     "react-dom": "catalog:",
+    "react-hook-form": "catalog:",
     "react-router": "catalog:",
     "zod": "catalog:"
   },
   "devDependencies": {
-    "@workspace/config-eslint": "workspace:*",
-    "@workspace/config-typescript": "workspace:*",
     "@types/node": "catalog:",
     "@types/react": "catalog:",
     "@types/react-dom": "catalog:",
+    "@workspace/config-eslint": "workspace:*",
+    "@workspace/config-typescript": "workspace:*",
     "eslint": "catalog:",
     "typescript": "catalog:"
-  }
+  },
+  "exports": {
+    "./*": "./src/*.tsx"
+  },
+  "license": "MIT",
+  "private": false,
+  "scripts": {
+    "check-types": "tsc --noEmit",
+    "lint": "eslint . --max-warnings=0",
+    "lint:fix": "eslint . --max-warnings=0 --fix"
+  },
+  "type": "module"
 }
