--- a/apps/extension/package.json
+++ b/apps/extension/package.json
@@ -1,18 +1,6 @@
 {
   "name": "extension",
-  "private": true,
   "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "wxt",
-    "build": "wxt build",
-    "zip": "wxt zip",
-    "compile": "tsc --noEmit",
-    "postinstall": "wxt prepare",
-    "check-types": "tsc --noEmit",
-    "lint": "eslint . --max-warnings=0",
-    "lint:fix": "eslint . --max-warnings=0 --fix"
-  },
   "dependencies": {
     "@tanstack/react-query": "catalog:",
     "@workspace/background": "workspace:*",
@@ -28,5 +16,17 @@
     "eslint": "catalog:",
     "typescript": "catalog:",
     "wxt": "^0.20.6"
-  }
+  },
+  "private": true,
+  "scripts": {
+    "build": "wxt build",
+    "check-types": "tsc --noEmit",
+    "compile": "tsc --noEmit",
+    "dev": "wxt",
+    "lint": "eslint . --max-warnings=0",
+    "lint:fix": "eslint . --max-warnings=0 --fix",
+    "postinstall": "wxt prepare",
+    "zip": "wxt zip"
+  },
+  "type": "module"
 }
