--- a/packages/config-eslint/package.json
+++ b/packages/config-eslint/package.json
@@ -1,13 +1,6 @@
 {
   "name": "@workspace/config-eslint",
   "version": "0.0.0",
-  "type": "module",
-  "private": true,
-  "exports": {
-    "./base": "./base.js",
-    "./react-internal": "./react-internal.js",
-    "./vite": "./vite.js"
-  },
   "devDependencies": {
     "@eslint/js": "catalog:",
     "@typescript-eslint/eslint-plugin": "^8.46.1",
@@ -22,5 +15,12 @@
     "globals": "catalog:",
     "typescript": "catalog:",
     "typescript-eslint": "catalog:"
-  }
+  },
+  "exports": {
+    "./base": "./base.js",
+    "./react-internal": "./react-internal.js",
+    "./vite": "./vite.js"
+  },
+  "private": true,
+  "type": "module"
 }
