--- a/packages/config-typescript/package.json
+++ b/packages/config-typescript/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@workspace/config-typescript",
   "version": "0.0.0",
-  "private": true,
-  "license": "MIT"
+  "license": "MIT",
+  "private": true
 }
