--- a/packages/config-vitest/package.json
+++ b/packages/config-vitest/package.json
@@ -1,19 +1,19 @@
 {
   "name": "@workspace/config-vitest",
   "version": "0.0.0",
-  "private": true,
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "scripts": {
-    "build": "tsc",
-    "check-types": "tsc --noEmit",
-    "dev": "tsc --watch"
-  },
   "dependencies": {
     "vitest": "catalog:"
   },
   "devDependencies": {
     "@workspace/config-typescript": "workspace:*",
     "typescript": "catalog:"
-  }
+  },
+  "main": "dist/index.js",
+  "private": true,
+  "scripts": {
+    "build": "tsc",
+    "check-types": "tsc --noEmit",
+    "dev": "tsc --watch"
+  },
+  "types": "dist/index.d.ts"
 }
