--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "@commitlint/cli": "^20.1.0",
     "@commitlint/config-conventional": "^20.0.0",
     "@commitlint/types": "^20.0.0",
+    "@cspell/dict-es-es": "^3.0.8",
     "@radix-ui/react-select": "^2.2.6",
+    "cspell": "^9.2.1",
     "lefthook": "^2.0.1",
     "pkg-pr-new": "^0.0.60",
     "turbo": "^2.6.0",
@@ -54,12 +56,11 @@
     "check-types": "turbo run check-types",
     "clean": "find . -type d \\( -name 'node_modules' -o -name 'build' -o -name 'dist' -o -name '.turbo' -o -name '.wxt' -o -name '.expo' -o -name '.astro' -o -name '.wrangler' \\) -prune -exec rm -rf '{}' +",
     "dev": "turbo run dev",
-    "format": "syncpack format && prettier --write .",
-    "format:check": "syncpack format --check && prettier --check .",
     "lint": "biome check --error-on-warnings",
     "lint:fix": "biome check --error-on-warnings --write",
     "preinstall": "npx only-allow bun",
     "prepare": "lefthook install",
+    "spell-check": "cspell -c ./cspell.config.mts .",
     "test": "vitest",
     "test:watch": "vitest --watch"
   },
