test: improve test config

--- a/packages/config-vitest/package.json
+++ b/packages/config-vitest/package.json
@@ -8,12 +8,15 @@
     "@workspace/config-typescript": "workspace:*",
     "typescript": "catalog:"
   },
-  "main": "dist/index.js",
+  "exports": {
+    ".": "./src/index.ts",
+    "./*": "./src/*.tsx"
+  },
   "private": true,
   "scripts": {
     "build": "tsc",
     "check-types": "tsc --noEmit",
     "dev": "tsc --watch"
   },
-  "types": "dist/index.d.ts"
+  "type": "module"
 }
