--- a/packages/shell/package.json
+++ b/packages/shell/package.json
@@ -1,45 +1,37 @@
 {
-  "name": "@workspace/features",
+  "name": "@workspace/shell",
   "version": "0.0.0",
   "dependencies": {
-    "@radix-ui/react-slot": "^1.2.3",
     "@tanstack/react-query": "catalog:",
     "@workspace/db": "workspace:*",
     "@workspace/db-react": "workspace:*",
     "@workspace/dev": "workspace:*",
     "@workspace/portfolio": "workspace:*",
     "@workspace/settings": "workspace:*",
-    "@workspace/solana-client-react": "workspace:*",
     "@workspace/ui": "workspace:*",
-    "effect": "^3.18.4",
     "lucide-react": "catalog:",
     "react": "catalog:",
     "react-dom": "catalog:",
     "react-router": "catalog:"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "catalog:",
-    "@turbo/gen": "^2.5.8",
     "@types/node": "catalog:",
     "@types/react": "catalog:",
     "@types/react-dom": "catalog:",
     "@workspace/config-eslint": "workspace:*",
     "@workspace/config-typescript": "workspace:*",
-    "@workspace/config-vitest": "workspace:*",
     "eslint": "catalog:",
-    "jsdom": "catalog:",
     "typescript": "catalog:"
   },
   "exports": {
-    "./*": "./src/*.ts"
+    "./*": "./src/*.tsx"
   },
-  "private": true,
+  "license": "MIT",
+  "private": false,
   "scripts": {
     "check-types": "tsc --noEmit",
     "lint": "eslint . --max-warnings=0",
-    "lint:fix": "eslint . --max-warnings=0 --fix",
-    "test": "vitest run",
-    "test:watch": "vitest --watch"
+    "lint:fix": "eslint . --max-warnings=0 --fix"
   },
   "type": "module"
 }
