--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -2,13 +2,19 @@
   "name": "site",
   "version": "0.0.1",
   "dependencies": {
-    "astro": "^5.14.6"
+    "@astrojs/starlight": "^0.36.1",
+    "@astrojs/starlight-tailwind": "^4.0.1",
+    "@tailwindcss/vite": "^4.0.7",
+    "astro": "^5.6.1",
+    "sharp": "^0.34.2",
+    "tailwindcss": "^4.0.7"
   },
   "scripts": {
     "astro": "astro",
     "build": "astro build",
     "dev": "astro dev",
-    "preview": "astro preview"
+    "preview": "astro preview",
+    "start": "astro dev"
   },
   "type": "module"
 }
