--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -32,6 +32,7 @@
     "react-day-picker": "^9.11.0",
     "react-dom": "catalog:",
     "react-hook-form": "^7.65.0",
+    "react-qrcode-logo": "^4.0.0",
     "react-resizable-panels": "^3.0.6",
     "react-router": "catalog:",
     "sonner": "^2.0.7",
