--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -4,10 +4,10 @@
   "dependencies": {
     "@astrojs/starlight": "^0.36.1",
     "@astrojs/starlight-tailwind": "^4.0.1",
-    "@tailwindcss/vite": "^4.0.7",
+    "@tailwindcss/vite": "catalog:",
     "astro": "^5.6.1",
     "sharp": "^0.34.2",
-    "tailwindcss": "^4.0.7"
+    "tailwindcss": "catalog:"
   },
   "scripts": {
     "astro": "astro",
