--- a/packages/db-react/package.json
+++ b/packages/db-react/package.json
@@ -10,7 +10,7 @@
     "react-dom": "catalog:"
   },
   "devDependencies": {
-    "@types/node": "^24.6.0",
+    "@types/node": "catalog:",
     "@types/react": "catalog:",
     "@types/react-dom": "catalog:",
     "@workspace/config-eslint": "workspace:*",
