feat(extension): create account and wallet

--- a/apps/extension/package.json
+++ b/apps/extension/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "@tanstack/react-query": "catalog:",
     "@workspace/background": "workspace:*",
+    "@workspace/keypair": "workspace:*",
     "@workspace/ui": "workspace:*",
     "@workspace/wallet-standard": "workspace:*",
     "react": "catalog:",
