--- a/examples/basic/package.json
+++ b/examples/basic/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.3",
+    "@solana/kit": "^5.0.0",
     "@solana/wallet-standard-chains": "^1.1.1",
     "@solana/wallet-standard-features": "^1.3.0",
     "@tailwindcss/vite": "^4.1.14",
