--- a/packages/background/package.json
+++ b/packages/background/package.json
@@ -2,6 +2,7 @@
   "name": "@workspace/background",
   "version": "0.0.0",
   "dependencies": {
+    "@solana/kit": "catalog:",
     "@solana/wallet-standard-features": "^1.3.0",
     "@wallet-standard/core": "^1.1.1",
     "@webext-core/messaging": "^2.3.0",
