--- a/packages/wallet-standard/package.json
+++ b/packages/wallet-standard/package.json
@@ -5,7 +5,8 @@
     "@solana/wallet-standard-chains": "^1.1.1",
     "@solana/wallet-standard-features": "^1.3.0",
     "@wallet-standard/core": "^1.1.1",
-    "@workspace/background": "workspace:*"
+    "@workspace/background": "workspace:*",
+    "@workspace/keypair": "workspace:*"
   },
   "devDependencies": {
     "@types/node": "catalog:",
