--- a/packages/config-vitest/package.json
+++ b/packages/config-vitest/package.json
@@ -15,8 +15,7 @@
   "private": true,
   "scripts": {
     "build": "tsc",
-    "check-types": "tsc --noEmit",
-    "dev": "tsc --watch"
+    "check-types": "tsc --noEmit"
   },
   "type": "module"
 }
