--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -5,6 +5,7 @@ packages:
 catalog:
   '@eslint/js': 9.38.0
   '@hookform/resolvers': ^5.2.2
+  '@solana-program/system': 0.9.0
   '@solana-program/token': 0.7.0
   '@solana-program/token-2022': 0.6.0
   '@solana/kit': 4.0.0
