--- a/apps/extension/package.json
+++ b/apps/extension/package.json
@@ -2,6 +2,7 @@
   "name": "extension",
   "version": "0.0.0",
   "dependencies": {
+    "@solana/wallet-standard-features": "^1.3.0",
     "@tanstack/react-query": "catalog:",
     "@workspace/background": "workspace:*",
     "@workspace/keypair": "workspace:*",
