--- a/packages/background/package.json
+++ b/packages/background/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "@solana/kit": "catalog:",
     "@solana/wallet-standard-features": "^1.3.0",
+    "@solana/wallet-standard-util": "^1.1.2",
     "@wallet-standard/core": "^1.1.1",
     "@webext-core/messaging": "^2.3.0",
     "@webext-core/proxy-service": "^1.2.1",
