feat(onboarding): implement generate/import flow

--- a/packages/onboarding/package.json
+++ b/packages/onboarding/package.json
@@ -9,6 +9,7 @@
     "@workspace/solana-client": "workspace:*",
     "@workspace/solana-client-react": "workspace:*",
     "@workspace/ui": "workspace:*",
+    "lucide-react": "catalog:",
     "react": "catalog:",
     "react-dom": "catalog:",
     "react-router": "catalog:"
