--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -1,1 +1,12 @@
+# Set the active cluster during db provisioning
+#VITE_ACTIVE_CLUSTER_ID='clusterDevnet'
+# Define the endpoint for the API
 VITE_API_ENDPOINT=http://localhost:8787
+# Set the cluster url for Devnet during db provisioning. Set the value to an empty string to disable the cluster.
+#VITE_CLUSTER_DEVNET=''
+# Set the cluster url for Localnet during db provisioning. Set the value to an empty string to disable the cluster.
+#VITE_CLUSTER_LOCALNET=''
+# Set the cluster url for Mainnet during db provisioning. Set the value to an empty string to disable the cluster.
+#VITE_CLUSTER_MAINNET=''
+# Set the cluster url for Testnet during db provisioning. Set the value to an empty string to disable the cluster.
+#VITE_CLUSTER_TESTNET=''
