feat: add endpointSubscriptions property to Cluster entity
This PR adds the ability to specify the subscriptions URL for a cluster.

Currently, we infer this URL by replacing 'http' with 'ws' which works in a lot of cases,
but fails on the test validator.

--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -4,9 +4,13 @@
 VITE_API_ENDPOINT=http://localhost:8787
 # Set the cluster url for Devnet during db provisioning. Set the value to an empty string to disable the cluster.
 #VITE_CLUSTER_DEVNET=''
+#VITE_CLUSTER_DEVNET_SUBSCRIPTIONS=''
 # Set the cluster url for Localnet during db provisioning. Set the value to an empty string to disable the cluster.
 #VITE_CLUSTER_LOCALNET=''
+#VITE_CLUSTER_LOCALNET_SUBSCRIPTIONS=''
 # Set the cluster url for Mainnet during db provisioning. Set the value to an empty string to disable the cluster.
 #VITE_CLUSTER_MAINNET=''
+#VITE_CLUSTER_MAINNET_SUBSCRIPTIONS=''
 # Set the cluster url for Testnet during db provisioning. Set the value to an empty string to disable the cluster.
 #VITE_CLUSTER_TESTNET=''
+#VITE_CLUSTER_TESTNET_SUBSCRIPTIONS=''
