--- a/packages/solana-client-react/package.json
+++ b/packages/solana-client-react/package.json
@@ -5,6 +5,7 @@
     "@tanstack/react-query": "catalog:",
     "@workspace/db": "workspace:*",
     "@workspace/db-react": "workspace:*",
+    "@workspace/keypair": "workspace:*",
     "@workspace/solana-client": "workspace:*",
     "react": "catalog:",
     "react-dom": "catalog:"
