feat(tools): mint spl token

--- a/packages/tools/package.json
+++ b/packages/tools/package.json
@@ -9,6 +9,7 @@
     "@workspace/keypair": "workspace:*",
     "@workspace/portfolio": "workspace:*",
     "@workspace/settings": "workspace:*",
+    "@workspace/solana-client": "workspace:*",
     "@workspace/solana-client-react": "workspace:*",
     "@workspace/ui": "workspace:*",
     "lucide-react": "catalog:",
