--- a/packages/solana-client-react/package.json
+++ b/packages/solana-client-react/package.json
@@ -7,6 +7,7 @@
     "@workspace/db-react": "workspace:*",
     "@workspace/keypair": "workspace:*",
     "@workspace/solana-client": "workspace:*",
+    "@workspace/ui": "workspace:*",
     "react": "catalog:",
     "react-dom": "catalog:"
   },
