--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -5,6 +5,7 @@
     "@cloudflare/vite-plugin": "^1.13.15",
     "@tailwindcss/vite": "catalog:",
     "@workspace/env": "workspace:*",
+    "@workspace/i18n": "workspace:*",
     "@workspace/shell": "workspace:*",
     "@workspace/ui": "workspace:*",
     "@workspace/wallet-standard": "workspace:*",
