--- a/packages/solana-client-react/package.json
+++ b/packages/solana-client-react/package.json
@@ -2,6 +2,7 @@
   "name": "@workspace/solana-client-react",
   "version": "0.0.0",
   "dependencies": {
+    "@solana/kit": "catalog:",
     "@tanstack/react-query": "catalog:",
     "@workspace/db": "workspace:*",
     "@workspace/db-react": "workspace:*",
