--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "build": "turbo run build",
     "check-types": "turbo run check-types",
     "dev": "turbo run dev",
-    "format": "syncpack format && NODE_OPTIONS=\"--experimental-strip-types\" prettier --write \"**/*.{ts,tsx,md}\"",
-    "format:check": "syncpack format --check && NODE_OPTIONS=\"--experimental-strip-types\" prettier --check \"**/*.{ts,tsx,md}\"",
+    "format": "syncpack format && NODE_OPTIONS=\"--experimental-strip-types\" prettier --write .",
+    "format:check": "syncpack format --check && NODE_OPTIONS=\"--experimental-strip-types\" prettier --check .",
     "lint": "turbo run lint",
     "lint:fix": "turbo run lint:fix",
     "preinstall": "npx only-allow pnpm",
